case study pages updated

--- a/feng-international.html
+++ b/feng-international.html
@@ -226,10 +226,10 @@
             <div class="page-header flex-middle">
                 <div class="container">
                     <div class="inner flex-middle">
-                        <h1 class="page-title">Sunstar Matrimony</h1>
+                        <h1 class="page-title">Feng International</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">Sunstar Matrimony</li>
+                            <li class="active">Feng International</li>
                         </ul>    
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>Sunstar Matrimony</h2>
+                            <h2>Feng International</h2>
                         </div>   
                     </div>
                     <div class="row">
@@ -257,7 +257,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-sm-0">
                             <div class="project-detail">
                                 <span>CLIENT:</span>
-                                <strong>Sunstar Matrimony</strong>
+                                <strong>Feng International</strong>
                             </div>
                         </div>
                         <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-6">
@@ -278,7 +278,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>Client's Challenges: </h3>
-                            <p><span class="drop-cap"><span class="drop-cap-letter">S</span></span>unstar Matrimony, a leading matrimonial company, faced challenges in the digital landscape with the absence of a dedicated online platform. The lack of a robust website hindered their ability to efficiently connect individuals seeking life partners and showcase the diverse range of matrimonial services they offered. The client recognized the need for a modern, user-friendly website that could enhance the matchmaking experience for their users.
+                            <p><span class="drop-cap"><span class="drop-cap-letter">F</span></span>eng International, a leading logistics and shipment company, faced challenges stemming from the lack of a dedicated online presence. The absence of a comprehensive website limited their ability to efficiently showcase their logistics solutions, connect with a wider audience, and provide essential information to potential clients. The client recognized the need for a modern, informative, and user-friendly website to strengthen their digital footprint in the competitive logistics industry.
                             <!-- <blockquote>
                                 <p>I cannot give you the formula for success, but I can give you the formula for failure. <br> It is: Try to please everybody.<br>
                                 <cite>– Herbert Bayard Swope</cite></p>
@@ -298,7 +298,7 @@
                                 </div>
                             </div>
                             <h3>Our Solution:</h3>
-                            <p>In response to Sunstar Matrimony's challenges, our team took on the task of designing and developing a comprehensive website. We focused on creating a visually appealing and intuitive platform that streamlined the matchmaking process. The website featured advanced search and matching algorithms to facilitate efficient partner searches based on user preferences. Additionally, we implemented a secure and user-friendly registration process, ensuring a seamless experience for both new users and those seeking to update their profiles. With a mobile-responsive design, the website aimed to cater to users across various devices, enhancing accessibility. The result was a dynamic online space that not only represented Sunstar Matrimony's commitment to facilitating meaningful connections but also provided an intuitive and engaging experience for individuals on their journey to find a life partner.</p>
+                            <p>In response to Feng International's challenges, our team took on the task of designing and developing a robust website. We focused on creating a platform that effectively communicated the company's expertise, range of services, and global logistics capabilities. The website featured detailed information about their shipping solutions, tracking services, and customer support mechanisms. A user-friendly interface and clear navigation were implemented to enhance the overall user experience. Additionally, we ensured the website's responsiveness across various devices, allowing clients to access vital information seamlessly. By integrating a visually appealing design with informative content, our solution provided Feng International with a dynamic online presence that not only showcased their logistical prowess but also facilitated effective communication with their target audience.</p>
                             <!-- <div class="blog-post projects-meta">
                                 <div class="entry-footer clearfix">
                                     <div class="widget_tag_cloudd tagcloud">
