--- a/grids-global.html
+++ b/grids-global.html
@@ -226,10 +226,10 @@
             <div class="page-header flex-middle">
                 <div class="container">
                     <div class="inner flex-middle">
-                        <h1 class="page-title">QMCC</h1>
+                        <h1 class="page-title">Grids Global</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">QMCC</li>
+                            <li class="active">Grids Global</li>
                         </ul>    
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>QMCC</h2>
+                            <h2>Grids Global</h2>
                         </div>   
                     </div>
                     <div class="row">
@@ -257,7 +257,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-sm-0">
                             <div class="project-detail">
                                 <span>CLIENT:</span>
-                                <strong>QMCC</strong>
+                                <strong>Grids Global</strong>
                             </div>
                         </div>
                         <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-6">
@@ -278,7 +278,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>Client's Challenges: </h3>
-                            <p><span class="drop-cap"><span class="drop-cap-letter">Q</span></span>MCC, an industrial inspection company, faced challenges with their existing website, which required a revamp and ongoing maintenance. The outdated design and functionality hindered their ability to effectively communicate their expertise, services, and commitment to quality industrial inspections. The client recognized the need for a modern, user-friendly website to enhance their online presence and provide clients with up-to-date information on their inspection capabilities.
+                            <p><span class="drop-cap"><span class="drop-cap-letter">G</span></span>rids Global, an animation and design company, faced challenges with the outdated interface of their website. The existing design failed to effectively showcase the creativity and innovation of their animation and design services, potentially hindering client engagement and the attraction of new business opportunities. The client recognized the need for a modernized online presence that could better represent their portfolio and capabilities in the dynamic field of animation and design.
                             <!-- <blockquote>
                                 <p>I cannot give you the formula for success, but I can give you the formula for failure. <br> It is: Try to please everybody.<br>
                                 <cite>– Herbert Bayard Swope</cite></p>
@@ -298,7 +298,7 @@
                                 </div>
                             </div>
                             <h3>Our Solution:</h3>
-                            <p>In response to QMCC's challenges, our team took on the task of revamping and maintaining their website. We initiated a redesign process focused on creating a visually appealing and informative platform that showcased QMCC's industrial inspection expertise. The revamped website incorporated clear navigation, detailed service descriptions, and case studies to effectively communicate the company's capabilities. To address ongoing maintenance needs, we implemented a robust content management system (CMS) that allowed easy updates and additions to the website. Additionally, we ensured that the website was optimized for responsiveness across various devices, providing a seamless experience for users. Our solution not only revitalized QMCC's online presence but also established a foundation for consistent updates and improvements, allowing them to effectively communicate their commitment to quality inspections to a broader audience.</p>
+                            <p>In response to Grids Global's challenges, our team embarked on the revamping of their website interface. We focused on creating a visually captivating and user-friendly platform that showcased the company's creative prowess. The revamped design incorporated high-quality visuals, an intuitive layout, and an organized portfolio to effectively highlight their diverse animation and design projects. Additionally, we implemented interactive elements and multimedia features to engage visitors and provide a dynamic user experience. The website was optimized for responsiveness across various devices, ensuring seamless access for users on desktops, tablets, and mobile phones. By combining a visually appealing design with enhanced functionality, our solution not only revitalized Grids Global's online presence but also positioned them as a leading player in the competitive animation and design industry.</p>
                             <!-- <div class="blog-post projects-meta">
                                 <div class="entry-footer clearfix">
                                     <div class="widget_tag_cloudd tagcloud">
