--- a/truzt-organic.html
+++ b/truzt-organic.html
@@ -226,10 +226,10 @@
             <div class="page-header flex-middle">
                 <div class="container">
                     <div class="inner flex-middle">
-                        <h1 class="page-title">Sunstar Matrimony</h1>
+                        <h1 class="page-title">Truzt Organic</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">Sunstar Matrimony</li>
+                            <li class="active">Truzt Organic</li>
                         </ul>    
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>Sunstar Matrimony</h2>
+                            <h2>Truzt Organic</h2>
                         </div>   
                     </div>
                     <div class="row">
@@ -257,7 +257,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-sm-0">
                             <div class="project-detail">
                                 <span>CLIENT:</span>
-                                <strong>Sunstar Matrimony</strong>
+                                <strong>Truzt Organic</strong>
                             </div>
                         </div>
                         <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-6">
@@ -278,7 +278,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>Client's Challenges: </h3>
-                            <p><span class="drop-cap"><span class="drop-cap-letter">S</span></span>unstar Matrimony, a leading matrimonial company, faced challenges in the digital landscape with the absence of a dedicated online platform. The lack of a robust website hindered their ability to efficiently connect individuals seeking life partners and showcase the diverse range of matrimonial services they offered. The client recognized the need for a modern, user-friendly website that could enhance the matchmaking experience for their users.
+                            <p><span class="drop-cap"><span class="drop-cap-letter">T</span></span>ruzt Organic, a leading organic vitamin extraction company based in the US, faced challenges related to their online visibility and communication. Without a dedicated website, the client encountered difficulties in effectively showcasing their organic vitamin products, educating consumers about their extraction process, and reaching a broader market. The absence of an online platform limited their ability to establish a strong digital presence in the competitive health and wellness industry.
                             <!-- <blockquote>
                                 <p>I cannot give you the formula for success, but I can give you the formula for failure. <br> It is: Try to please everybody.<br>
                                 <cite>– Herbert Bayard Swope</cite></p>
@@ -298,7 +298,9 @@
                                 </div>
                             </div>
                             <h3>Our Solution:</h3>
-                            <p>In response to Sunstar Matrimony's challenges, our team took on the task of designing and developing a comprehensive website. We focused on creating a visually appealing and intuitive platform that streamlined the matchmaking process. The website featured advanced search and matching algorithms to facilitate efficient partner searches based on user preferences. Additionally, we implemented a secure and user-friendly registration process, ensuring a seamless experience for both new users and those seeking to update their profiles. With a mobile-responsive design, the website aimed to cater to users across various devices, enhancing accessibility. The result was a dynamic online space that not only represented Sunstar Matrimony's commitment to facilitating meaningful connections but also provided an intuitive and engaging experience for individuals on their journey to find a life partner.</p>
+                            <p>To address Truzt Organic's challenges, our team initiated the design and development of a comprehensive website. We focused on creating a visually appealing and informative platform that highlighted the unique aspects of their organic vitamin extraction process and showcased their product range. The website included detailed product descriptions, benefits, and educational content to engage and inform visitors. We implemented a user-friendly interface with clear navigation, ensuring an intuitive experience for potential customers. Additionally, the website was designed to be responsive across various devices, providing accessibility to users on desktops, tablets, and mobile phones. Our solution not only established Truzt Organic's online presence but also served as a valuable resource for consumers seeking organic vitamin products, contributing to increased brand awareness and customer engagement.
+
+                                </p>
                             <!-- <div class="blog-post projects-meta">
                                 <div class="entry-footer clearfix">
                                     <div class="widget_tag_cloudd tagcloud">
