--- a/vcare.html
+++ b/vcare.html
@@ -226,10 +226,10 @@
             <div class="page-header flex-middle">
                 <div class="container">
                     <div class="inner flex-middle">
-                        <h1 class="page-title">Sunstar Matrimony</h1>
+                        <h1 class="page-title">VCare</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="index.html">Home</a></li>
-                            <li class="active">Sunstar Matrimony</li>
+                            <li class="active">VCare</li>
                         </ul>    
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>Sunstar Matrimony</h2>
+                            <h2>VCare</h2>
                         </div>   
                     </div>
                     <div class="row">
@@ -257,7 +257,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-6 col-6 mb-4 mb-sm-0">
                             <div class="project-detail">
                                 <span>CLIENT:</span>
-                                <strong>Sunstar Matrimony</strong>
+                                <strong>VCare</strong>
                             </div>
                         </div>
                         <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-6">
@@ -278,7 +278,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3>Client's Challenges: </h3>
-                            <p><span class="drop-cap"><span class="drop-cap-letter">S</span></span>unstar Matrimony, a leading matrimonial company, faced challenges in the digital landscape with the absence of a dedicated online platform. The lack of a robust website hindered their ability to efficiently connect individuals seeking life partners and showcase the diverse range of matrimonial services they offered. The client recognized the need for a modern, user-friendly website that could enhance the matchmaking experience for their users.
+                            <p><span class="drop-cap"><span class="drop-cap-letter">V</span></span>Care, a brand specializing in hair and skin clinical products, faced challenges in developing their website using in-house resources. The client encountered limitations in terms of expertise and bandwidth, hindering the timely and efficient creation of a robust online platform for their products. VCare sought external development resources to overcome these challenges and create a professional, user-friendly website that effectively showcased their clinical products.
                             <!-- <blockquote>
                                 <p>I cannot give you the formula for success, but I can give you the formula for failure. <br> It is: Try to please everybody.<br>
                                 <cite>– Herbert Bayard Swope</cite></p>
@@ -298,7 +298,7 @@
                                 </div>
                             </div>
                             <h3>Our Solution:</h3>
-                            <p>In response to Sunstar Matrimony's challenges, our team took on the task of designing and developing a comprehensive website. We focused on creating a visually appealing and intuitive platform that streamlined the matchmaking process. The website featured advanced search and matching algorithms to facilitate efficient partner searches based on user preferences. Additionally, we implemented a secure and user-friendly registration process, ensuring a seamless experience for both new users and those seeking to update their profiles. With a mobile-responsive design, the website aimed to cater to users across various devices, enhancing accessibility. The result was a dynamic online space that not only represented Sunstar Matrimony's commitment to facilitating meaningful connections but also provided an intuitive and engaging experience for individuals on their journey to find a life partner.</p>
+                            <p>In response to VCare's challenges, our team provided outsourced development resources for their website project. Leveraging our expertise, we worked closely with VCare to understand their brand, products, and target audience. Our solution involved the creation of a customized website that highlighted VCare's hair and skin clinical products through visually appealing design and intuitive navigation. We ensured the incorporation of an e-commerce platform for seamless product browsing and online purchases. The outsourced development resources allowed VCare to benefit from specialized skills, ensuring the website's functionality and responsiveness across various devices. This collaborative approach not only addressed VCare's initial challenges but also positioned them with a professionally crafted online platform to effectively showcase and sell their clinical products.</p>
                             <!-- <div class="blog-post projects-meta">
                                 <div class="entry-footer clearfix">
                                     <div class="widget_tag_cloudd tagcloud">
