work in title and case study

--- a/it-services.html
+++ b/it-services.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Engitech</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+    <title>Services - Magnion</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo/favicon-16x16.png" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/flaticon.css" />
@@ -181,14 +181,14 @@
                                         <li><a href="cooming-soon.html">Coming Soon</a></li>-->
                                     </ul>
                                 </li>
-                                <li class="menu-item-has-children"><a href="#">Services</a>
+                                <li class="menu-item-has-children"><a href="it-services.html">Services</a>
                                     <!--<ul class="sub-menu">
                                         <li><a href="it-services.html">It Services</a></li>
                                         <li><a href="web-development.html">Web Development</a></li>
                                         <li><a href="mobile-development.html">Mobile Development</a></li>
                                     </ul>-->
                                 </li>
-                                <li class="menu-item-has-children"><a href="#">Case Study</a>
+                                <li class="menu-item-has-children"><a href="case-study-main.html">Case Study</a>
                                     <!--<ul class="sub-menu">
                                         <li><a href="portfolio-masonry.html">Portfolio Masonry</a></li>
                                         <li><a href="portfolio-carousel.html">Portfolio Carousel</a></li>
