--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Magnion</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+    <title>Magnion Technology Factory - Custom Web Development Company</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo/favicon-16x16.png" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/flaticon.css" />
