--- a/case-study/country-resort.html
+++ b/case-study/country-resort.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Magnion</title>
+    <title>The Country Resort - Magnion Technology Factory</title>
     <link rel="shortcut icon" type="image/x-icon" href="../images/logo/favicon-16x16.png" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/font-awesome.min.css" />
@@ -20,7 +20,7 @@
 
 <body class="royal_preloader">
     <div id="page" class="site">
-        <header id="site-header" class="site-header sticky-header header-static">
+        <header id="site-header" class="site-header sticky-header header-static" style="margin-top: 10;">
             <!-- Main Header start -->
             <div class="header-topbar style-2">
                 <div class="octf-area-wrap">
