changes for banner update in case study

--- a/case-study/country-resort.html
+++ b/case-study/country-resort.html
@@ -272,7 +272,8 @@
                     <div class="space-50"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="../images/projects/project-single.jpg" alt="" class="single-project-img">
+                            <!--src="../images/projects/project-single.jpg"-->
+                            <img src="../images/CaseStudy/banner1.png" alt="" class="single-project-img">
                         </div>
                     </div>
                     <div class="row">
