change for upadte lap img

--- a/case-study/country-resort.html
+++ b/case-study/country-resort.html
@@ -286,17 +286,17 @@
                             </blockquote> -->
                             <div class="simple-slider owl-theme owl-carousel">
                                 <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LapImg1.png" alt="">
+                                </div>
+                                <div class="projects-slide-item">
+                                    <img src="../images/CaseStudy/LapImg2.png" alt="">
+                                </div>
+                                <!-- <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s1.png" alt="">
                                 </div>
                                 <div class="projects-slide-item">
                                     <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s1.png" alt="">
-                                </div>
-                                <div class="projects-slide-item">
-                                    <img src="../images/projects/project-details-s2.png" alt="">
-                                </div>
+                                </div> -->
                             </div>
                             <h3>Our Solution:</h3>
                             <p>In response to this, our team initiated the development of Country Resort's inaugural website. Focusing on a clean and captivating design, we built a user-friendly platform that not only introduced the resort to the online audience but also incorporated an integrated booking system, ensuring a seamless experience for visitors looking to explore and reserve accommodations. Emphasizing a mobile-first approach, the website was meticulously designed to be responsive across various devices, providing an optimal viewing experience for users on smartphones and tablets. Additionally, we implemented robust SEO practices to enhance the resort's online visibility, ensuring that it ranks favorably in search engine results, driving organic traffic and further establishing Country Resort's presence in the digital landscape. By providing a comprehensive solution for their first online venture, we set the foundation for Country Resort to successfully connect with its audience, facilitate hassle-free bookings, and achieve a strong online presence from the outset.</p>
