Thumbnail Upload And Update for 2

--- a/case-study-main.html
+++ b/case-study-main.html
@@ -262,7 +262,7 @@
                                         <div class="projects-box">
                                             <div class="projects-thumbnail">
                                                 <a href="case-study/country-resort.html">
-                                                    <img src="images/projects/720x720/project1-720x720.jpg" alt="">
+                                                    <img src="images/CaseStudy/Thumbnail1.png" alt="">
                                                 </a>
                                             </div>
                                             <div class="portfolio-info">
@@ -282,7 +282,7 @@
                                         <div class="projects-box">
                                             <div class="projects-thumbnail">
                                                 <a href="case-study/prestige-vacations.html">
-                                                    <img src="images/projects/720x720/project2-720x720.jpg" alt="">
+                                                    <img src="images/CaseStudy/Thumbnail2.png" alt="">
                                                 </a>
                                             </div>
                                             <div class="portfolio-info">
