--- a/case-study/prestige-vacations.html
+++ b/case-study/prestige-vacations.html
@@ -272,7 +272,7 @@
                     <div class="space-50"></div>
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="../images/projects/project-single.jpg" alt="" class="single-project-img">
+                            <img src="../images/CaseStudy/banner2.png" alt="" class="single-project-img">
                         </div>
                     </div>
                     <div class="row">
