footer issue resolved

--- a/case-study/truzt-organic.html
+++ b/case-study/truzt-organic.html
@@ -380,13 +380,13 @@
                                         <button type="submit" class="octf-btn octf-btn-primary">Send Message</button>
                                     </p>
                                 </div>
-                            </form>
+                            </form> -->
                         </div>
                     </div>
                 </div>
             </section>
             
-        </div> -->
+        </div>
 
 
    
@@ -472,7 +472,7 @@
             //Preloader
             Royal_Preloader.config({
                 mode           : 'logo',
-                logo           :'images/logo/mtflogo.png',
+                logo           :'../images/logo/mtflogo.png',
                 logo_size      : [160, 75],
                 showProgress   : true,
                 showPercentage : true,
